// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="affix"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="affix"
      size="12"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd.
    </span>
  </div>
</ds-field>
`;

exports[`Counter 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="counter"
  >
    Legg til en beskrivelse
  </label>
  <textarea
    rows="4"
    id="counter"
    aria-describedby="mnsry0lwbdz3"
  >
  </textarea>
  <p
    data-field="counter"
    data-limit="75"
    id="mnsry0lwbdz3"
    data-label="75 tegn igjen"
    data-state="under"
  >
  </p>
</ds-field>
`;

exports[`Format 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="format"
  >
    Fødselsnummer
  </label>
  <input
    id="format"
    inputmode="numeric"
    type="text"
  >
</ds-field>
`;

exports[`Position 1`] = `
<div style="max-width: 200px; margin: auto;">
  <div style="display: flex; flex-direction: column; gap: var(--ds-size-2);">
    <ds-field
      data-position="end"
      data-clickdelegatefor="airplane"
    >
      <label
        data-weight="medium"
        for="airplane"
      >
        Flymodus
      </label>
      <input
        role="switch"
        id="airplane"
        type="checkbox"
      >
    </ds-field>
    <ds-field
      data-position="end"
      data-clickdelegatefor="sounds"
    >
      <label
        data-weight="medium"
        for="sounds"
      >
        Lydløs
      </label>
      <input
        role="switch"
        id="sounds"
        type="checkbox"
      >
    </ds-field>
  </div>
</div>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="preview"
  >
    E-post
  </label>
  <div
    data-field="description"
    id="mnsry0lwbdz2"
  >
    E-posten din brukes til å logge inn og motta varsler
  </div>
  <input
    id="preview"
    aria-invalid="true"
    type="text"
    value="ola nordmann@udir.no"
    aria-describedby="mnsry0lwbdz1 mnsry0lwbdz2"
  >
  <p
    data-field="validation"
    id="mnsry0lwbdz1"
  >
    Du må oppgi en gyldig e-postadresse
  </p>
</ds-field>
`;
